fix: fixed layout isses with different container widths - fixed issues jumping back to the main page when trying to switch languages in the imprint or privacy policy section - fixed issue with hero section not being full height on mobil screens

--- a/style.css
+++ b/style.css
@@ -53,13 +53,13 @@
 }
 
 .content-wrapper-footer {
-    max-width: 1250px;
+    max-width: 1440px;
     height: 200px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 100px;
+    padding: 0 5px;
 }
 
 .wrapper-social-media-footer {
