--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,9 +3,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 0 200px;
     margin-bottom: 20px;
-    max-width: 1300px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 
@@ -13,7 +12,7 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    right: 15%;
+    right: 50px;
     top: 101px;
 }
 
